correction version mobile

--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ span#burger:hover {
     }
 
     header img {
-        width: 150px;
+        width: 300px;
     }
 
     header h1 {
